# aprende-ya

./: .gitignore  Makefile  MakefileBackend  README.md  docker-compose-backend.yml  docker-compose.yml  package-lock.json
api/: Dockerfile  main.py  pyproject.toml
api/app/: certificate.py  course.py  questions.py  user.py  user_course_relation.py  wishlists.py
api/app/db/: certificate_repository.py  course_repository.py  database.py  exceptions.py  models.py  questions_repository.py  user_course_relation_repository.py  user_repository.py  whishlist_repository.py
app/: .Dockerfile.swp  Dockerfile  package-lock.json  package.json
app/public/: index.html
app/src/: App.js  appTheme.js  index.js
app/src/CourseList/: CourseList.js
app/src/NavBar/: NavBar.css  NavBar.js
app/src/PaymentForm/: PaymentForm.js
app/src/components/CourseCreation/: CourseCreation.js
app/src/components/CourseDescription/: CourseDescription.css  CourseDescription.js
app/src/components/CourseExam/: CourseExam.js
app/src/components/Cover/: Cover.css  (+1 more)
app/src/courseDescription/: CourseDescription.js
app/src/courseDetail/: CourseDetail.js  EditCourseModal.js
app/src/courseForm/: CourseForm.js
app/src/courseModal/: EditCourseModal.js
app/src/coursesList/: CourseData.js
app/src/header/: Header.js
app/src/login/: LoginForm.css  LoginForm.js  LoginPage.js
app/src/paymentForm/: PaymentForm.js
app/src/registration/: RegistrationForm.js
app/src/userProfile/: UserProfile.js
certificates/: Certificates.sol  abi.txt  certificates.sol  main.py  pyproject.toml  tx_receipt.txt
(+20 files in other folders)
