[tool.poetry]
name = "aprende-ya"
version = "0.1.0"
description = ""
authors = ["matias-gonz <maigonzalez@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
