[tool.poetry]
name = "aprende-ya"
version = "0.1.0"
description = ""
authors = ["matias-gonz <maigonzalez@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.8"
bcrypt = "^4.0.1"
psycopg2-binary = "^2.9.9"
web3 = "^6.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
